--- a/css/styles.css
+++ b/css/styles.css
@@ -584,10 +584,11 @@ img {
 }
 
 .modal-close-icon {
+  fill: #2e2f42;
 }
 
 .modal-title {
-  color: var(--NAVY-BLUE, #2e2f42);
+  color: #2e2f42;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
@@ -601,7 +602,7 @@ img {
 }
 
 .modal-label {
-  color: var(--LIGHT-SLATE, #8e8f99);
+  color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.48px;
@@ -617,17 +618,17 @@ img {
   height: 40px;
   border-radius: 4px;
   background-color: transparent;
-  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
+  border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
   padding-left: 38px;
 }
 
 .modal-input:focus {
-  border: 1px solid var(--IRIS, #4d5ae5);
+  border: 1px solid var(--c-brand);
 }
 
 .modal-input:focus + .modal-icon {
-  fill: #4d5ae5;
+  fill: var(--c-brand);
 }
 
 .modal-icon {
@@ -642,11 +643,15 @@ img {
   height: 120px;
   resize: none;
   border-radius: 4px;
-  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
+  border: 1px solid rgba(46, 47, 66, 0.4);
   background-color: transparent;
   outline: transparent;
   padding: 8px 16px;
   display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+  color: #2e2f4266;
 }
 
 .visually-hidden {
@@ -663,22 +668,29 @@ img {
 }
 
 .checkfield {
+  display: inline-block;
 }
 
 .check-input:checked + .input-check-text > .check-empty {
-  background-color: greenyellow;
-  border: none;
+  background-color: var(--c-hover-header);
+  border: 1px solid var(--c-hover-header);
   fill: #fff;
 }
-
+.check-input {
+  margin-right: 8px;
+}
 .input-check-text {
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
 }
 
 .check-empty {
   width: 16px;
   height: 16px;
   border-radius: 2px;
-  border: 1px solid red;
+  border: 1px solid #2e2f4266;
   fill: transparent;
   display: inline-flex;
   align-items: center;
@@ -689,4 +701,29 @@ img {
 }
 
 .input-check-link {
+  color: var(--c-brand);
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.48px;
+  text-decoration-line: underline;
+}
+.modal-send-btn {
+  display: block;
+  padding: 16px 32px;
+  margin: 0 auto;
+  gap: 10px;
+  border: none;
+  border-radius: 4px;
+  color: var(--c-bgl);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+  background-color: var(--c-brand);
+}
+.modal-send-btn:hover,
+.modal-send-btn:focus {
+  background-color: var(--c-hover-header);
+  border: none;
 }
