--- a/css/styles.css
+++ b/css/styles.css
@@ -608,7 +608,7 @@ img {
 }
 
 .modal {
-  max-width: 408px;
+  width: 408px;
   min-height: 584px;
   background-color: var(--c-bgl);
   padding: 72px 24px 24px;
@@ -712,7 +712,9 @@ img {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.modal-field-comment {
+  margin-bottom: 16px;
+}
 .modal-textarea {
   width: 100%;
   height: 120px;
