--- a/css/styles.css
+++ b/css/styles.css
@@ -794,7 +794,7 @@ img {
   max-width: 169px;
   height: 56px;
   font-family: 'Roboto', sans-serif;
-  margin-bottom: 24px 0;
+  margin: 0 auto;
   padding: 16px 32px;
   border: none;
   border-radius: 4px;
