--- a/css/styles.css
+++ b/css/styles.css
@@ -791,7 +791,7 @@ img {
 }
 .modal-send-btn {
   display: block;
-  max-width: 169px;
+  min-width: 169px;
   height: 56px;
   font-family: 'Roboto', sans-serif;
   margin: 0 auto;
