--- a/css/styles.css
+++ b/css/styles.css
@@ -762,6 +762,7 @@ img {
 .check-empty {
   width: 16px;
   height: 16px;
+  margin-right: 8px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   fill: transparent;
